--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ Version: 0.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: 
-Text Domain: portabledesignsystem
-Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, rtl-language-support, theme-options, threaded-comments, translation-ready, wide-blocks
+Text Domain: PDS
+Tags: 
 */
